--- a/2026/Spring/Statistics for International Commerce/Week_1_1/W-1_1_SIC.Rmd
+++ b/2026/Spring/Statistics for International Commerce/Week_1_1/W-1_1_SIC.Rmd
@@ -324,6 +324,12 @@ By the end of the course, you will be able to:
 
 ---
 
+# Disclaimer
+
+- This course may be adjusted during the semester depending on class progress and learning needs.
+
+---
+
 class: inverse, center, middle
 
 # 3. How we will learn
@@ -338,6 +344,21 @@ class: inverse, center, middle
   * Class time for discussion, interpretation, coding demos, and hands-on problem solving
 
 * Real economic and business datasets are used throughout
+
+---
+
+# Course materials
+
+1. **Required / Core Reference:**
+  - Douglas Lind, William Marchal, Samuel Wathen. *Statistical Techniques in Business and Economics*, 16th ed. (LMW)
+
+2. **Supplementary Resources:**
+  - James, G., Witten, D., Hastie, T., Tibshirani, R., & Taylor, J. (2023). *An Introduction to Statistical Learning: with Applications in Python* (ISLP). Available at https://www.statlearning.com/
+  - James, G., Witten, D., Hastie, T., Tibshirani, R., & Taylor, J. (2013). *An Introduction to Statistical Learning: with Applications in R* (ISLR). Available at https://www.statlearning.com/
+
+3. **Online Platforms:**
+  - DataCamp Classroom (assigned modules)
+  - Google Colab (for coding practice)
 
 ---
 
@@ -476,6 +497,8 @@ class: inverse, center, middle
 * Participation: 10%
 
 More details on each component will be provided down the road.
+
+*Remember*, I'm not giving you grades; you're earning them.
 
 ---
 
