--- a/2026/Spring/Financial Institutions and System/Week 1/W1_FIS.Rmd
+++ b/2026/Spring/Financial Institutions and System/Week 1/W1_FIS.Rmd
@@ -329,6 +329,16 @@ By the end of this course, students will be able to:
 
 ---
 
+# Skills you will learn
+
+Return on skills is higher than return on knowledge. 
+
+<div style="flex: 1; text-align: center;">
+    <img src="p1.png" style="max-width: 60%; height: auto;">
+  </div>
+
+---
+
 # Teaching method
 
 This course follows a **flipped classroom approach**, where students are expected to complete assigned readings before class. Each session is usually structured as follows:  
